fixed footer overflowing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,7 +130,7 @@ h1 {
 }
 .footer-bottom{
 background: #314d0d;
-width: 100vw;
+width: 100%;
 padding: 20px 0;
 text-align: center;
 }
